--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  background-image: url('https://source.unsplash.com/1600x900/?city');
+  background-image: url('https://source.unsplash.com/1600x900/');
 }
 
 h1, h3{
